fixed overflow issues on timesheet

--- a/src/component/timesheet/_styles.css
+++ b/src/component/timesheet/_styles.css
@@ -1,6 +1,6 @@
 .timesheet-control-pane {
   background-color: white;
-  margin: auto;
+  margin: 0;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -68,4 +68,21 @@
   width: 370px;
   padding: 25px;
   margin: 0;
+}
+
+#punch-pane {
+  height: fit-content;
+}
+
+#timesheet-master-pane {
+  display: flex;
+  flex-direction: column;
+}
+
+.timesheet-display {
+  margin-top: 0;
+  overflow-y: auto;
+  flex-grow: 1;
+  flex-shrink: 1;
+  min-height: 85px;
 }
