--- a/src/component/welcome/_styles.css
+++ b/src/component/welcome/_styles.css
@@ -16,7 +16,7 @@
 
 .login-container {
   width: 400px;
-  margin: 25% auto auto;
+  margin: 35vh auto auto;
   border-width: 2px;
   border-style: solid;
   border-radius: 16px;
